# motionPlanning

./: .gitignore  CMakeLists.txt  README.md  main.cpp
CMakeModules/: Findflann.cmake
build_debug/: CMakeCache.txt  Makefile  beast_old.inst  cmake_install.cmake  outfile
configuration/: configuration.hpp
dependencies/: catch.hpp  httplib.hpp
domains/: DynamicCarPlanning.hpp  SE3RigidBodyPlanning.hpp  blimp.hpp  carsetup.hpp  hovercraft.hpp  linkage.hpp  quadrotor.hpp
experiments/: autofix.sh  experiments.bash  generalsettings.inc
experiments/skip/: 2dinstances.inc  3dinstances.inc  3dinstances_blimp.inc  3dinstances_mostclose.inc  3dinstances_quad.inc  anytimebeastCost.alg  beast.alg  beastnew.alg  dynamiccar.dom  experiments.bash  experiments_replaceOldFile.bash  generalsettings.inc  hovercraft.dom  plaku.alg
inst/: abeast.inst  abeastcost.inst  atempts.inst  atempts_empty.inst  atempts_small.inst  beast_URE_small.inst  beast_empty.inst  beast_grid.inst  beast_halton.inst  beast_new.inst  beast_newinteriro.inst  beast_nogeometric.inst  beast_old.inst  beast_small.inst  beast_split.inst  beats_small.inst  gust.inst  integrated_grid.inst  integrated_grid_2d.inst  integrated_prm.inst  sample.inst  sst.inst  sststar.inst  ucttest.inst  ucttest2.inst  ucttest3.inst  ucttest4.inst
instance_visualization/: CMakeLists.txt  main.cpp  main_all.cpp  main_map.cpp  opengl_wrapper.hpp
models/: single-wall-narrow.dae  small_box.dae
planners/: anytimebeastcostplanner.hpp  anytimebeastplanner.hpp  anytimebeastplannernew.hpp  atemptsplanner.hpp  beastplanner.hpp  beastplannerUpdateRightEdge.hpp  beastplannergeometric.hpp  beastplannernew.hpp  beats_planner.hpp  gust.hpp  uctplanner.hpp
planners/modules/: sstpruningmodule.hpp
plot/plotting_anytime/: main.go  makefile  parsing.go  plotting.go
plot/plotting_anytime/plot/: Hovercraft-3-ladder-car2_planar_robot2GoalAchievementTime.eps  Hovercraft-3-ladder-car2_planar_robotCoverage.eps  Hovercraft-3-ladder-car2_planar_robotGoalAchievementTime.eps  Hovercraft-3-ladder-car2_planar_robotSolutionCost.eps  Hovercraft-3-ladder-car2_planar_robotSolutionQuality.eps  Hovercraft-3-ladder-car2_planar_robotTimeSinceLastSolution.eps  Hovercraft-forest-car2_planar_robot2GoalAchievementTime.eps  Hovercraft-forest-car2_planar_robotCoverage.eps  Hovercraft-forest-car2_planar_robotGoalAchievementTime.eps  Hovercraft-forest-car2_planar_robotSolutionCost.eps  Hovercraft-forest-car2_planar_robotSolutionQuality.eps  Hovercraft-forest-car2_planar_robotTimeSinceLastSolution.eps  KinematicCar-3-ladder-car2_planar_robot2GoalAchievementTime.eps  KinematicCar-3-ladder-car2_planar_robotCoverage.eps  KinematicCar-3-ladder-car2_planar_robotGoalAchievementTime.eps  KinematicCar-3-ladder-car2_planar_robotSolutionCost.eps  KinematicCar-3-ladder-car2_planar_robotSolutionQuality.eps  KinematicCar-3-ladder-car2_planar_robotTimeSinceLastSolution.eps  KinematicCar-forest-car2_planar_robot2GoalAchievementTime.eps  KinematicCar-forest-car2_planar_robotCoverage.eps  KinematicCar-forest-car2_planar_robotGoalAchievementTime.eps  KinematicCar-forest-car2_planar_robotSolutionCost.eps  KinematicCar-forest-car2_planar_robotSolutionQuality.eps  KinematicCar-forest-car2_planar_robotTimeSinceLastSolution.eps  plots.tex  plots_test.aux  plots_test.tex
plot/plotting_single/: main_box.go  main_gat.go  main_onlyPer.go  makefile  parsing.go  parsing_allsolved.go  plotting_box.go  plotting_median.go  plotting_onlyPer.go
plot/plotting_single/boxplot/: Blimp_fifthelement.daeCPUTimetest.eps  Blimp_forest.daeCPUTimetest.eps  DynamicCar_open-area.daeCPUTimetest.eps  Hovercraft_open-area.daeCPUTimetest.eps  Quadrotor_fifthelement.daeCPUTimetest.eps  Quadrotor_forest.daeCPUTimetest.eps
samplers/: #beastsampler_dstarSampleTest.hpp#  abstractionbasedsampler.hpp  beastsampler_dijkstra.hpp  beastsampler_dstar.hpp  beastsampler_dstarDis.hpp  beastsampler_dstarNewBonus.hpp  beastsampler_dstarNoGeometricTest.hpp  beastsampler_dstarSampleTest.hpp  beastsampler_dstarUpdateRightEdge.hpp  beastsamplerbase.hpp  beats_sampler.hpp  guststatesampler.hpp  halton_sampler.hpp  integrated_beast.hpp  integrated_beast_base.hpp  integrated_beast_grid.hpp  integrated_beast_prm.hpp  uctsampler.hpp
samplers/abstractions/: abstraction.hpp  prm_gust.hpp  prm_lite_grid.hpp  prm_lite_halton.hpp  prmlite.hpp
samplers/refactored/: abstractvertex.hpp  anytimebeastsampler_Dis.hpp
samplers/refactored/atempts/: abstractedge_atempts.hpp  abstractvertexOps.hpp  abstractvertex_atempts.hpp  anytimebeastsampler_Atempts.hpp  atemptsdijkstra.hpp  atemptspath.hpp  atemptsvertexwrapper.hpp
scripts/: beats.py  beats_plot.py  beta_learning.py  configuration_generator.py  configuration_parser.py  slack_notification.py  test.csv  tianyi_plot.py
structs/: utils.hpp
test/: test.cpp
test/samplers/: integrated_beast_test.hpp
